# Photo-Slider

./: .gitignore  Dockerfile  Makefile  README.md  __main__.py  displayer_main.py  docker-compose.yaml  fetcher_main.py  generate-certs.sh  google_drive_api.py  nginx.conf  pyproject.toml  quickstart.py
backend/: google_drive_api.py  main.py  maintainer.py  models.py  pyproject.toml  ruff.toml  s3_api.py
backend/frontend/: photo_slide.html
filebrowser/: filebrowser.conf  filebrowser.db
src/: config.py  main.py  models.py  photo_scheduler.py  s3_api.py  setup_logging.py
src/templates/: index.html
src/www/: index.html
