[project]
name = "PhotoSlider"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Raphael Ickovics", email = "raphealickovics@gmail.com"},
]
dependencies = [
    "loguru>=0.7.3",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "urllib3<2.0.0",
    "ruff>=0.11.7",
    "aioboto3>=14.3.0",
    "jinja2>=3.1.0",
]
requires-python = "==3.12.*"
license = {text = "MIT"}

[tool.pdm]
distribution = false
