[project]
name = "PhotoSlider"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Raphael Ickovics", email = "raphealickovics@gmail.com"},
]
dependencies = [
    "google-api-python-client>=2.128.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "loguru>=0.7.3",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "urllib3<2.0.0",
    "ruff>=0.11.7",
]
requires-python = "==3.9.*"
license = {text = "MIT"}

[tool.pdm]
distribution = false
